src/objects/ProductRequest.object
<CustomObject>
    <fields>
        <fullName>ERPJSONVersion__c</fullName>
        <defaultValue>0</defaultValue>
        <label>ERPJSON Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ERPOrderNumber__c</fullName>
        <description>The ERP Number from ERP - populated by integration based on Audit Logs in AX</description>
        <label>ERP Order Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERPOrderStatus__c</fullName>
        <description>Shows the status of the order in ERP - comes from the integration from Audit Logs in AX</description>
        <label>ERP Order Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERPReturnMessage__c</fullName>
        <description>Will show the return message from ERP from the integrations. Can show both success messages as well as Error messages. Info Comes from Audit Logs in AX.</description>
        <label>ERP Return Message</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SendToERPDate__c</fullName>
        <label>Send To ERP Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TF_CustomerRequestNumber__c</fullName>
        <description>Combination fields to be sent to AX. (InventTransferTable.CustomerReqNumber_DNT)

DON&apos;T ADD TO PAGE LAYOUT</description>
        <formula>WorkOrder.WorkOrderNumber&amp;&quot;|&quot;&amp;WorkOrder.SourceRecord__r.Customer_Id__c</formula>
        <label>Customer Request Number</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All_ProductRequests</fullName>
        <columns>Name</columns>
        <columns>SourceLocation</columns>
        <columns>DestinationLocation</columns>
        <columns>WorkOrder</columns>
        <columns>Status</columns>
        <columns>ERPOrderStatus__c</columns>
        <columns>CreatedBy</columns>
        <filterScope>Everything</filterScope>
        <label>All Product Requests</label>
    </listViews>
    <listViews>
        <fullName>My_ProductRequests</fullName>
        <filterScope>Mine</filterScope>
        <label>My Product Requests</label>
    </listViews>
    <listViews>
        <fullName>ProductRequestsSenttoERP</fullName>
        <columns>Name</columns>
        <columns>SourceLocation</columns>
        <columns>DestinationLocation</columns>
        <columns>WorkOrder</columns>
        <columns>CreatedDate</columns>
        <columns>CreatedBy</columns>
        <columns>SendToERPDate__c</columns>
        <columns>ERPOrderStatus__c</columns>
        <columns>ERPOrderNumber__c</columns>
        <columns>ERPReturnMessage__c</columns>
        <columns>Status</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SendToERPDate__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>#Product Requests Sent to ERP</label>
    </listViews>
    <listViews>
        <fullName>SubmittedProductRequestsForReview</fullName>
        <columns>Name</columns>
        <columns>SourceLocation</columns>
        <columns>DestinationLocation</columns>
        <columns>WorkOrder</columns>
        <columns>Status</columns>
        <columns>CreatedDate</columns>
        <columns>CreatedBy</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status</field>
            <operation>equals</operation>
            <value>Submitted</value>
        </filters>
        <filters>
            <field>SendToERPDate__c</field>
            <operation>equals</operation>
        </filters>
        <label>#Submitted Product Requests For Review</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>